--- a/src/assets/styles/pages/_home-page.scss
+++ b/src/assets/styles/pages/_home-page.scss
@@ -12,11 +12,10 @@
     }
     
     .balance{
-        // font-family: semibold;
+        font-family: Poppins-SemiBold;
         color: $clrN1;
         font-size: rem(32px);
         top: rem(51px);
-        font-weight: bold;
     }
     
     .footer{
