--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,16 +1,16 @@
-// @font-face {
-//     font-family: Inter-Light;
-//     src: url("/src/assets/fonts/Inter/Inter-Light.ttf");
-// }
-// @font-face {
-//     font-family: Inter-Regular;
-//     src: url("/src/assets/fonts/Inter/Inter-Regular.ttf");
-// }
-// @font-face {
-//     font-family: Inter-SemiBold;
-//     src: url("/src/assets/fonts/Inter/Inter-SemiBold.ttf");
-// }
-// @font-face {
-//     font-family: Inter-Bold;
-//     src: url("/src/assets/fonts/Inter/Inter-Bold.ttf");
-// }
+@font-face {
+    font-family: Poppins-Light;
+    src: url("../../fonts/Poppins/Poppins-Light.ttf");
+}
+@font-face {
+    font-family: Poppins-Regular;
+    src: url("../../fonts/Poppins/Poppins-Regular.ttf");
+}
+@font-face {
+    font-family: Poppins-SemiBold;
+    src: url("../../fonts/Poppins/Poppins-SemiBold.ttf");
+}
+@font-face {
+    font-family: Poppins-Bold;
+    src: url("../../fonts/Poppins/Poppins-Bold.ttf");
+}
