--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -7,20 +9,21 @@ html {
 
 body {
   margin: 0;
-  background-color: #E5E5E5;
+  background-color: #e5e5e5;
   color: $clrN5;
-  // font-family: Inter-Regular;
+  font-family: Poppins-Regular;
 }
 
-.app{
+.app {
   background-color: $clrB1;
   @include flex(column, space-between);
 
-  main{
+  main {
     @include flex(column);
     margin-top: 10px;
-    &.add-margin{
-      margin: 10px $marginSides 0;
+    width: -webkit-fill-available;
+    &.add-margin {
+      margin: $marginSides;
     }
   }
 }
@@ -46,5 +49,5 @@ img {
 
 button,
 input {
-    cursor: pointer;
+  cursor: pointer;
 }
