adding data to markate page and styling select

--- a/src/assets/styles/components/_app-header.scss
+++ b/src/assets/styles/components/_app-header.scss
@@ -37,6 +37,17 @@ header {
         }
     }
 
+    .market {
+        &__icon {
+            background-image: url("../../images/icons/market.png");
+        }
+        &:hover, &.active {
+            .market__icon {
+                background-image: url("../../images/icons/market-orange.png");
+            }
+        }
+    }
+
     .chart {
         &__icon {
             background-image: url("../../images/icons/chart.png");
