--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -15,6 +15,7 @@
 @import "pages/contact-page";
 @import "pages/contact-details-page";
 @import "pages/contact-edit-page";
+@import "pages/market-page";
 @import "pages/signup";
 
 // COMPONENTS
