--- a/src/assets/styles/pages/_signup.scss
+++ b/src/assets/styles/pages/_signup.scss
@@ -12,39 +12,42 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        // position: absolute;
     }
 
-    .title {
-        font-size: rem(32px);
-        padding: rem(32px) rem(24px);
-        span {
-            color: $clrP1;
-        }
-    }
+    .bottom {
+        @include flex(column);
+        margin: $marginSides;
 
-    .explore {
-        align-self: flex-end;
-        background-color: $clrP1;
-        color: $clrN1;
-        margin-inline-end: rem(23px);
-        padding: 8px;
-        border-radius: 20px;
-        @include flex();
-        gap: rem(5px);
-        transition: all 0.3s ease-out;
-        width: 72px;
-        
-        &__icon {
-            width: 15px;
-            height: 15px;
-            background-image: url("../../images/icons/arrow-right.png");
-            background-size: cover;
+        .title {
+            font-size: rem(32px);
+            span {
+                color: $clrP1;
+            }
         }
 
-        &:hover {
-            width: 87px;
-            transition: all 0.3s ease-in;
+        .explore {
+            align-self: flex-end;
+            background-color: $clrP1;
+            color: $clrN1;
+            margin-inline-end: rem(23px);
+            padding: 8px;
+            border-radius: 20px;
+            @include flex();
+            gap: rem(5px);
+            transition: all 0.3s ease-out;
+            width: 72px;
+
+            &__icon {
+                width: 15px;
+                height: 15px;
+                background-image: url("../../images/icons/arrow-right.png");
+                background-size: cover;
+            }
+
+            &:hover {
+                width: 93px;
+                transition: all 0.3s ease-in;
+            }
         }
     }
 }
