--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -25,3 +25,4 @@
 @import "components/contact-preview";
 @import "components/transfer-fund";
 @import "components/move-list";
+@import "components/rate-preview";
