--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -22,6 +22,8 @@ body {
     @include flex(column);
     margin: $marginSides 0;
     width: -webkit-fill-available;
+    // overflow-y: scroll;
+    // height: calc(100vh - 103px - 48px);
     &.add-margin {
       margin: $marginSides;
     }
