--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -19,7 +19,7 @@
 @import "pages/signup";
 
 // COMPONENTS
-@import "components/app-header";
+@import "components/nav";
 @import "components/contact-filter";
 @import "components/contact-list";
 @import "components/contact-preview";
