--- a/src/assets/styles/setup/_animations.scss
+++ b/src/assets/styles/setup/_animations.scss
@@ -1,20 +1,20 @@
 @keyframes illustrations {
     0% {
-      background-image: url('../../images/illustrations/try/3.png');
+      background-image: url('../../images/illustrations/3.png');
     }
     20% {
-      background-image: url('../../images/illustrations/try/3.png');
+      background-image: url('../../images/illustrations/3.png');
     }
     40% {
-        background-image: url('../../images/illustrations/try/7.png');
+        background-image: url('../../images/illustrations/7.png');
     }
     60% {
-        background-image: url('../../images/illustrations/try/7.png');
+        background-image: url('../../images/illustrations/7.png');
     }
     80% {
-        background-image: url('../../images/illustrations/try/try1.png');
+        background-image: url('../../images/illustrations/1.png');
     }
     100% {
-        background-image: url('../../images/illustrations/try/try1.png');
+        background-image: url('../../images/illustrations/1.png');
     }
   }
