--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -25,4 +25,5 @@
 @import "components/contact-preview";
 @import "components/transfer-fund";
 @import "components/move-list";
+@import "components/move-preview";
 @import "components/rate-preview";
