--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -8,7 +8,7 @@
 }
 
 @mixin black-row {
-  @include flex(row, start);
+  @include flex(row, flex-start);
   width: 100%;
   padding: 10px 24px;
   gap: 16px;
