--- a/src/assets/styles/pages/_contact-page.scss
+++ b/src/assets/styles/pages/_contact-page.scss
@@ -1,4 +1,9 @@
-.add-btn{
+.contact-page {
+    margin-bottom: 0;
+    gap: 24px;
+}
+
+.add-btn {
     align-self: flex-end;
     position: fixed;
     bottom: 110px;
