--- a/src/assets/styles/components/_contact-filter.scss
+++ b/src/assets/styles/components/_contact-filter.scss
@@ -1,5 +1,7 @@
 .filter {
     border: $marginSides solid transparent;
+    border-top: 0;
+    border-bottom: 0;
     position: relative;
     width: 100%;
 
